--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "decompress": "^4.2.1",
     "js-yaml": "^3.14.0",
     "koa": "^2.13.0",
+    "json-bigint": "^0.3.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^8.0.8",
     "lodash": "^4.17.15",
